--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         <!-- insert buttons here -->
 
       </div>
-      <div class = "col-md-4">
+      <div class = "col-md-4 search-div">
         <!-- insert search box and button here -->
         <form class = "form-inline">
           <div class="form-group mx-sm-3 mb-2">
-            <label for="input" class="sr-only">Search Term</label>
-            <input type="text" class="form-control" id="input" placeholder="search term">
+            <label for="input" class="sr-only">Search Cheesy TV Show</label>
+            <input type="text" class="form-control" id="input" placeholder="Search Cheesy TV Show">
           </div>
           <button type="submit" id="search-button" class="btn btn-primary mb-2">Search</button>
         </form>
